--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
               "loop": true,
               "speed": 600,
               "autoplay": {
-                "delay": 5000
+                "delay": 22000
               },
               "slidesPerView": "auto",
               "pagination": {
@@ -520,7 +520,10 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>I worked with Prime on a website for our company, and I'm really happy with how it turned out. Their team was
+                  professional, listened to our ideas, and made the whole process easy. They didn't just build a website, they created
+                  something that looks great and works perfectly for us. If you need a website done right, I'd definitely recommend Prime.
+                  They know what they're doing and made sure we got exactly what we needed.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -536,7 +539,10 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>I had the chance to work with Prime and I'm really happy with the result. They were easy to work with, understood our
+                  needs, and delivered a website that looks great and functions smoothly. The whole process was simple, and they made sure
+                  everything was just right. If you're looking for a reliable team to build your website, I highly recommend Prime. They
+                  did a fantastic job!</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -552,7 +558,9 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>As a store owner, I needed a new website but didn't have time and budget for something complicated. Prime made the whole
+                  process fast and easy. They handled everything. Best of all, the price was affordable, and the website looks great! I
+                  definitely recommend to work with this team.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -568,7 +576,10 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>I worked with the team at Prime daily while they developed our website, and I'm really impressed. Their managers were
+                  great to work with, professional, quick to respond, and kept everything running smoothly. They made sure I was updated
+                  every step of the way, which made my job easier. I highly recommend this agency. Their managers really know how to take
+                  care of their clients!</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -584,7 +595,10 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>I work on my own and I needed to update my website but didn't have a big budget. Prime was amazing to work with, they
+                  understood my needs and delivered results far beyond what I expected. The updated website looks professional, modern,
+                  and really reflects my style. If you're an individual looking for great quality without spending a fortune, I highly
+                  recommend them.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
