--- a/index.html
+++ b/index.html
@@ -99,28 +99,33 @@
           <div class="col-lg-6 ps-lg-4 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <h3>About Us</h3>
             <p>
-              Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.
+              At Prime, we are dedicated to empowering small businesses and individuals through innovative web design and marketing
+              solutions. With a passionate team of experienced professionals, we strive to create visually captivating websites that
+              not only reflect our clients' unique brands but also enhance their online presence. We believe in building long-lasting
+              relationships with our clients, offering ongoing support and expertise to help them navigate the ever-changing digital
+              landscape. We aim to make high-quality web design and marketing accessible and affordable for everyone, enabling our
+              clients to thrive in a competitive market.
             </p>
             <ul>
               <li>
                 <i class="bi bi-at"></i>
                 <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                  <h5>Enhancing online presence</h5>
+                  <p>We focus on digital connectivity and online presence, highlighting the importance of accessibility in the digital age.</p>
                 </div>
               </li>
               <li>
                 <i class="bi bi-briefcase"></i>
                 <div>
-                  <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                  <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                  <h5>Growth in the digital world</h5>
+                  <p>We help businesses explore new opportunities and navigate the journey of growth in the online world.</p>
                 </div>
               </li>
               <li>
                 <i class="bi bi-globe2"></i>
                 <div>
-                  <h5>Voluptatem et qui exercitationem</h5>
-                  <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
+                  <h5>Connecting businesses globally</h5>
+                  <p>We use effective web design and marketing strategies to connect businesses with audiences worldwide.</p>
                 </div>
               </li>
             </ul>
