--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-up">
             <h2>CREATING WEBSITES THAT MAKE YOU STOP &amp; STARE</h2>
-            <p>We are team of talented designers and developers making Prime websites for your business.</p>
+            <p>Our dedicated team of experienced designers, developers, and skilled content creators at Prime is committed to
+            transforming your ideas into stunning digital realities. With a focus on collaboration and innovation, we ensure that
+            every project not only meets your expectations but exceeds them. We offer our services at affordable prices, making
+            top-quality design accessible for small businesses and individuals alike.</p>
             <div class="d-flex mt-4 justify-content-center justify-content-md-start">
               <a href="#about" class="cta-btn">Get Started</a>
             </div>
@@ -186,7 +189,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Every project is developed with integrity, professionalism and dedication.</p>
+        <p>At Prime, we are passionate about transforming your vision into reality. From captivating web design to strategic
+        marketing initiatives, we combine creativity and expertise to turn your ideas into reality. Explore our services below
+        and discover how we can help you achieve your goals!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -277,7 +282,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Custom web design, applications and services.</p>
+        <p>Feel free to explore some of our projects below, showcasing our expertise in Web, App, and 3D design. Each project
+        reflects our commitment to creativity and excellence, and we can't wait for you to see what we've accomplished!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -623,7 +629,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Our professional team.</p>
+        <p>We have a passionate and skilled team of professionals dedicated to delivering exceptional web design, web development,
+        and marketing solutions tailored for small businesses. Our diverse backgrounds in graphic design, branding, and product
+        management allow us to approach every project with a unique perspective. Together, we aim to create a business website
+        that looks great and works well, helping you succeed online</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -714,7 +723,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Feel free to contact us for a completely free initial consultation.</p>
+        <p>We're here to help you every step of the way! If you have any questions or need assistance, please don't hesitate to
+        contact us. Our team is dedicated to providing you with the best solutions tailored to your needs, all at affordable
+        prices. Whether you're looking to enhance your online presence or embark on a new project, we're excited to hear from
+        you! Reach out today, and let's work together to bring your vision to life!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -802,13 +814,13 @@
           <a href="/" class="logo d-flex align-items-center">
             <span class="sitename">Prime</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-          <div class="social-links d-flex mt-4">
+          <p>Transforming Ideas into Stunning Websites.</p>
+          <!--<div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
+          </div>-->
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
