--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-up">
-            <h2>CREATING WEBSITES THAT MAKE YOU STOP &amp; STARE</h2>
+            <h2>TRANSFORMING IDEAS INTO STUNNING WEBSITES</h2>
             <p>Our dedicated team of experienced designers, developers, and skilled content creators at Prime is committed to
             transforming your ideas into stunning digital realities. With a focus on collaboration and innovation, we ensure that
             every project not only meets your expectations but exceeds them. We offer our services at affordable prices, making
@@ -814,7 +814,7 @@
           <a href="/" class="logo d-flex align-items-center">
             <span class="sitename">Prime</span>
           </a>
-          <p>Transforming Ideas into Stunning Websites.</p>
+          <p>Web Solutions Tailored for Your Success.</p>
           <!--<div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
