--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <a href="service-web-design.html" class="stretched-link">
                 <h3>Web Design</h3>
               </a>
-              <p>Creativity and individual approach make our solutions attractive and desirable.</p>
+              <p>Our creative and individualized approach makes our solutions both attractive and highly desirable</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -218,7 +218,7 @@
               <a href="service-web-development.html" class="stretched-link">
                 <h3>Web Development</h3>
               </a>
-              <p>Making of comprehensive and reliable web applications is our best strategy in web development.</p>
+              <p>Developing comprehensive and reliable web applications is our key strategy in web development</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -230,7 +230,7 @@
               <a href="service-product-management.html" class="stretched-link">
                 <h3>Product Management</h3>
               </a>
-              <p>Strategically driving of development, launching, support and improvement of products bring a successful result.</p>
+              <p>Strategically driving the development, launch, support, and improvement of products leads to successful results</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -242,7 +242,7 @@
               <a href="service-graphic-design.html" class="stretched-link">
                 <h3>Graphic Design</h3>
               </a>
-              <p>High-quality graphics are an essential part of modern applications.</p>
+              <p>High-quality graphics are an essential part of modern applications</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -254,7 +254,7 @@
               <a href="service-branding.html" class="stretched-link">
                 <h3>Branding</h3>
               </a>
-              <p>Company recognition is a key part of a successful business.</p>
+              <p>Company recognition plays a vital role in establishing a successful business</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -266,7 +266,7 @@
               <a href="service-marketing.html" class="stretched-link">
                 <h3>Marketing</h3>
               </a>
-              <p>Consistent online growth of a business is a base part of delivering products to the highest range of customers.</p>
+              <p>Consistent online growth is essential for delivering products to a broader range of customers</p>
             </div>
           </div><!-- End Service Item -->
 
