--- a/index.html
+++ b/index.html
@@ -723,8 +723,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>We're here to help you every step of the way! If you have any questions or need assistance, please don't hesitate to
-        contact us. Our team is dedicated to providing you with the best solutions tailored to your needs, all at affordable
+        <p>We're here to help you every step of the way! Our team is dedicated to providing you with the best solutions tailored to your needs, all at affordable
         prices. Whether you're looking to enhance your online presence or embark on a new project, we're excited to hear from
         you! Reach out today, and let's work together to bring your vision to life!</p>
       </div><!-- End Section Title -->
