Service web design.

--- a/service-web-design.html
+++ b/service-web-design.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Web Design - Prime</title>
-  <meta name="description" content="Web Design - service details.">
-  <meta name="keywords" content="">
+  <title>Professional Website Design and Web Development Services</title>
+  <meta name="description" content="Offering top-quality website design for small businesses and personal projects. Build credibility, improve SEO, and drive growth with our expert services.">
+  <meta name="keywords" content="web design, website design, web development, small business website, professional web design, user-friendly websites, mobile responsive websites, SEO web design, branding, brand consistency, conversion rate optimization, custom website design, scalable web development, digital marketing, e-commerce websites, portfolio websites, service-oriented websites, nonprofit websites, online store design, wedding websites, personal blogs, family websites, pet websites, custom personal websites, personal brand websites, website development services">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -107,25 +107,72 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-web-design.jpg" alt="" class="img-fluid services-img">
+            <h3>Web Design: Crafting Engaging Websites for Businesses and Individuals</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Web Design is the process of creating and organizing the visual and functional elements of a website. Whether it's a
+              small business website or a personal project, Web Design plays a key role in delivering a strong online presence that
+              engages users and supports their needs.
+            </p>
+            <p>
+              Professional Web Design has many advantages:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Strong Online Presence. A well-designed small business website from our company establishes credibility and helps
+              businesses stand out in a crowded digital market.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>User-Friendly Experience. Our website design ensures visitors can easily navigate and find the necessary information,
+              improving user satisfaction and retention.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Mobile Responsiveness. Prime Web Design services focus on creating websites that function smoothly on all devices,
+              particularly mobile phones and tablets.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Search Engine Optimization (SEO). Effective website design and development incorporates SEO best practices, improving
+              search rankings and making it easier for customers to find your business online.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Brand Consistency. Through branding and website design, businesses can maintain a consistent visual identity across all
+              pages, reinforcing their brand image.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Increased Conversion Rates. With strategic design, calls to action, and user flows, our website development services can
+              help increase conversions, turning visitors into paying customers.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Customization and Flexibility. Working with a professional Web Design company allows for personalized features,
+              integrations, and designs that meet unique business or personal needs.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Scalability for Growth. A well-structured website development allows businesses to scale easily as they grow, adding new
+              features and pages without major overhauls.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Effective Marketing. Integration with marketing tools and platforms allows your website to support promotional efforts,
+              including email marketing, social media, and e-commerce.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Improved Credibility and Trust. A modern, professional Web Design builds trust with visitors, making them more likely
+              to engage with your business or project.</span></li>
             </ul>
+            <h3>Small Business Website Design</h3>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              A small business website is essential because it acts as the digital face of the company, making the first impression on
+              potential customers. Prime will help you attract new visitors and build credibility. When you invest in website design,
+              you ensure that your brand is represented accurately online. We make an effective small business website design to
+              showcase your products, services, and customer reviews, making it easier to convert visitors into loyal customers. For
+              businesses looking to grow, utilizing web development services and website design and marketing can be the key to
+              expanding their reach and improving sales.
             </p>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              Prime creates a fully functional online store including user-friendly shopping carts, product galleries, and customer
+              accounts. We design elegant portfolio sites for creative professionals, such as photographers, designers, or artists. We
+              develop websites for service-oriented businesses, such as consultants, contractors, or beauty salons, and make engaging
+              websites for nonprofits that feature mission statements, donation options, and event calendars. We can develop any type
+              of website, from e-commerce platforms and service-based business sites to portfolios, event pages, and community-driven
+              websites, all tailored to meet your unique needs.
             </p>
-            <p>-------------</p>
+            <h3>Custom Websites for Personal Use</h3>
             <p>
-              Creativity and individual approach make our solutions attractive and desirable.
+              Websites are not only essential for entrepreneurs but also for individuals looking to express personal passions. These
+              can be used to celebrate significant life events or passions, such as wedding websites, family or personal blogs,
+              pet-dedicated websites, or custom personal websites. Couples can use website design services to create personalized
+              wedding sites, which can feature event details, gift registries, and photo galleries. Families may want to use a website
+              development service to document their experiences or share updates with extended relatives through a family blog or
+              photos. Pet lovers can create a website just for fun, providing the audience with stories, photos, or even pet-care
+              tips. Beyond weddings, blogs, and pet sites, we specialize in creating a wide range of personal websites tailored to any
+              need. Whether you're looking to build a portfolio, showcase a hobby, organize a community, or even launch a personal
+              brand, our website design services provide endless possibilities to bring your vision to life.
+            </p>
+            <h3>Contact Us for Your Website Design and Development Needs</h3>
+            <p>
+              If you are looking to create a website for your business or personal use or update an existing one, please <a href="/#contact">contact us</a>.
+              Prime is a professional team ready to meet all your website design and development needs. We offer exceptional quality
+              at an affordable price, ensuring the best value for your investment.
             </p>
           </div>
 
