--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 position-relative" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about-us.jpg" class="img-fluid" alt="">
             <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a> -->
           </div>
 
