Service web development.

--- a/service-web-design.html
+++ b/service-web-design.html
@@ -118,25 +118,25 @@
               Professional Web Design has many advantages:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Strong Online Presence. A well-designed small business website from our company establishes credibility and helps
+              <li><i class="bi bi-check-circle"></i><span>Strong Online Presence. A well-designed small business website from our company establishes credibility and helps
               businesses stand out in a crowded digital market.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>User-Friendly Experience. Our website design ensures visitors can easily navigate and find the necessary information,
+              <li><i class="bi bi-check-circle"></i><span>User-Friendly Experience. Our website design ensures visitors can easily navigate and find the necessary information,
               improving user satisfaction and retention.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Mobile Responsiveness. Prime Web Design services focus on creating websites that function smoothly on all devices,
+              <li><i class="bi bi-check-circle"></i><span>Mobile Responsiveness. Prime Web Design services focus on creating websites that function smoothly on all devices,
               particularly mobile phones and tablets.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Search Engine Optimization (SEO). Effective website design and development incorporates SEO best practices, improving
+              <li><i class="bi bi-check-circle"></i><span>Search Engine Optimization (SEO). Effective website design and development incorporates SEO best practices, improving
               search rankings and making it easier for customers to find your business online.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Brand Consistency. Through branding and website design, businesses can maintain a consistent visual identity across all
+              <li><i class="bi bi-check-circle"></i><span>Brand Consistency. Through branding and website design, businesses can maintain a consistent visual identity across all
               pages, reinforcing their brand image.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Increased Conversion Rates. With strategic design, calls to action, and user flows, our website development services can
+              <li><i class="bi bi-check-circle"></i><span>Increased Conversion Rates. With strategic design, calls to action, and user flows, our website development services can
               help increase conversions, turning visitors into paying customers.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Customization and Flexibility. Working with a professional Web Design company allows for personalized features,
+              <li><i class="bi bi-check-circle"></i><span>Customization and Flexibility. Working with a professional Web Design company allows for personalized features,
               integrations, and designs that meet unique business or personal needs.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Scalability for Growth. A well-structured website development allows businesses to scale easily as they grow, adding new
+              <li><i class="bi bi-check-circle"></i><span>Scalability for Growth. A well-structured website development allows businesses to scale easily as they grow, adding new
               features and pages without major overhauls.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Effective Marketing. Integration with marketing tools and platforms allows your website to support promotional efforts,
+              <li><i class="bi bi-check-circle"></i><span>Effective Marketing. Integration with marketing tools and platforms allows your website to support promotional efforts,
               including email marketing, social media, and e-commerce.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Improved Credibility and Trust. A modern, professional Web Design builds trust with visitors, making them more likely
+              <li><i class="bi bi-check-circle"></i><span>Improved Credibility and Trust. A modern, professional Web Design builds trust with visitors, making them more likely
               to engage with your business or project.</span></li>
             </ul>
             <h3>Small Business Website Design</h3>
