--- a/service-web-development.html
+++ b/service-web-development.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Web Development - Prime</title>
-  <meta name="description" content="Web Development - service details.">
-  <meta name="keywords" content="">
+  <title>Comprehensive Web Development Services for Businesses and Individuals</title>
+  <meta name="description" content="Discover expert web development services that cater to both businesses and personal projects. From creating engaging websites to seamless web applications, we provide tailored solutions that enhance your online presence and drive success.">
+  <meta name="keywords" content="web development, website design, custom web development, small business website, business website design, e-commerce platform, personal website, personal blog, responsive design, mobile-friendly website, SEO web development, online visibility, web app development, website developers, web development agency, website design company, custom websites, web design for personal use, online portfolio, community website, marketing integration, social media, professional web development, website maintenance, website updates, website traffic, online engagement, web development services">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -107,25 +107,74 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-web-development.jpg" alt="" class="img-fluid services-img">
+            <h3>Web Development: Building Powerful Websites for Businesses and Individuals</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              In today's digital world, having a website is essential. Whether you're running a small business or looking to create a
+              personal site, a well-designed and functional website can significantly impact your online presence. At Prime, we
+              specialize in web development and website design services that help businesses and individuals bring their visions to
+              life.
+            </p>
+            <h3>Why Web Development is Essential for Businesses</h3>
+            <p>
+              For a small business website, the design and functionality reflect your brand's professionalism. A great business
+              website design not only provides valuable information but also drives engagement and boosts customer trust. Our team of
+              experienced web developers focuses on creating a website that works smoothly, looks fantastic, and meets the unique
+              needs of your business.
+            </p>
+            <p>
+              Whether you're looking to create a website for your business, develop an e-commerce platform, or simply showcase your
+              services, we have the expertise to build the best website for small businesses. Our custom web development services
+              include:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Creating user-friendly websites that engage customers and encourage conversions.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Implementing responsive design for seamless viewing on mobile and desktop devices.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Ensuring integration with <a href="service-marketing.html">marketing tools</a> and SEO best practices to boost your online visibility.</span></li>
             </ul>
+            <h3>Web Development for Personal Projects</h3>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              Websites aren't just for businesses. Many individuals want to make their own websites to share their hobbies, personal
+              projects, or life events. From personal blogs to wedding websites, our web design company specializes in crafting unique
+              and engaging sites. You can count on us to create a site that reflects your personality, with all the features you need.
             </p>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              We also help clients create websites for personal use, whether it's building an online portfolio, launching a community
+              page, or developing a custom website for your favorite pastime. With our <a href="service-web-design.html">website design services</a>, you'll have a site
+              that feels truly personal and functional.
             </p>
-            <p>-------------</p>
+            <h3>Custom Web Development Services for Every Need</h3>
             <p>
-              Making of comprehensive and reliable web applications is our best strategy in web development.
+              At Prime, we offer comprehensive web development services that cover everything from web app development to e-commerce
+              site creation. We work closely with you to understand your goals and ensure that the final product meets your
+              expectations. Our full range of website development services includes:
+            </p>
+            <ul>
+              <li><i class="bi bi-check-circle"></i><span>Custom web development tailored to your business needs.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Web design and development that ensures visual appeal and functionality.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Web application development for interactive, user-focused experiences.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Professional web development company support to maintain and update your site.</span></li>
+            </ul>
+            <h3>Expand Your Business with Web Development and <a href="service-marketing.html">Marketing Solutions</a></h3>
+            <p>
+              In today's competitive market, having a website isn't enough. You need a site that not only works but also drives
+              traffic. That's why we integrate website design and marketing strategies, including SEO and social media, to increase
+              your reach. Our website developers work hand-in-hand with our marketing team to create a comprehensive plan that helps
+              your business grow.
+            </p>
+            <p>
+              When you work with our web development agency, you're not just getting a website — you're getting a complete solution
+              designed to attract customers, boost engagement, and improve sales.
+            </p>
+            <h3>Get Started with Prime’s Web Development Services</h3>
+            <p>
+              Whether you want to build a website for your business, launch a new project, or create a custom personal site, Prime’s
+              web development and website design services are here to make your vision a reality. From start to finish, our website
+              developers will ensure your project is delivered with the highest quality and the best value for your investment.
+            </p>
+            <p>
+              <a href="/#contact">Contact us</a> today to start your project with Prime — the trusted web design company that turns ideas into powerful online
+              experiences.
             </p>
           </div>
 
