--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
         <p>We have a passionate and skilled team of professionals dedicated to delivering exceptional web design, web development,
         and marketing solutions tailored for small businesses. Our diverse backgrounds in graphic design, branding, and product
         management allow us to approach every project with a unique perspective. Together, we aim to create a business website
-        that looks great and works well, helping you succeed online</p>
+        that looks great and works well, helping you succeed online.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
